some doc fixes